# algoscalc-back

./: .env.local  .gitignore  Dockerfile  README.md  api_data_classes.py  api_models.py  app.py  config.json  constants.py  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  sonar-project.properties  test.py  test_main.http  test_runner.py  tox.ini
.github/workflows/: OurCiCdProd.yml  OurCiCdTest.yml  ci_cd_actions.yml  lint.yml  run-back.yml  sonarcloud.yml  test  test.yml  test_branch_action.yml
algorithms/fibonacci/: definition.json  function.py  tests.py
algorithms/fibonacci_list/: definition.json  function.py  tests.py
app_tests/: app_tests.py
config/: app_config.json  log_config.json
core/: algorithm.py  algorithm_builder.py  algorithm_collection.py  data_element.py
core/schemas/: algorithm_schema.json  data_element_schema.json
core_tests/: algorithm_builder_tests.py  algorithm_collection_tests.py  algorithm_tests.py  constants.py  data_element_tests.py  data_shape_tests.py  data_type_tests.py  test_runner.py
docs/: conf.py  docs_env.yaml  modules.rst  src.core.rst  src.core_tests.rst
docs/_build/doctrees/: config.doctree  environment.pickle  index.doctree  modules.doctree  src.core.doctree  src.core_tests.doctree  src.doctree
docs/_build/html/: .buildinfo  config.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  src.core.html  src.core_tests.html  src.html
src/: __init__.py  api_models.py  config.py  constants.py  dev.py  main.py  requirements.txt  test_runner.py
src/algorithms/: __init__.py
src/algorithms/fibonacci/: definition.json  function.py  tests.py
src/algorithms/fibonacci_list/: definition.json  function.py  tests.py
src/algorithms/fuel_consumption/: definition.json  function.py  tests.py
src/algorithms/matrix_sub/: definition.json  function.py  tests.py
src/algorithms/mult_numbers/: definition.json  function.py  tests.py
src/algorithms/perfect_numbers/: definition.json  function.py  tests.py
src/app_tests/: app_tests.py
src/core/: __init__.py  algorithm.py  algorithm_builder.py  algorithm_collection.py  constants.py  data_element.py
src/core/schemas/: algorithm_schema.json  (+1 more)
src/core_tests/: algorithm_builder_tests.py  algorithm_collection_tests.py  algorithm_tests.py  constants.py  data_element_tests.py  data_shape_tests.py  data_type_tests.py
src/internal/: __init__.py  algorithm_builder.py  algorithm_collection.py  algorithm_executor.py  constants.py
src/routers/: __init__.py  algorithms.py  error_handlers.py  schemas.py
tests/: __init__.py  case.py  conftest.py  test_runner.py
tests/app_tests/: app_tests.py
tests/core_tests/: __init__.py  algorithm_builder_tests.py  algorithm_collection_tests.py  algorithm_tests.py  data_element_tests.py  data_shape_tests.py  data_type_tests.py
tests/internal/: test_algorithm_builder.py  test_algorithm_collection.py  test_algorithm_executor.py
tests/routers/: conftest.py  test_algorithms.py
(+41 files in other folders)
