[tool.poetry]
name = "algoscalc-back"
version = "0.1.0"
description = "A training project for the development of algorithms in the context of a web application"
authors = ["Alexander Mikhailov <45492097+MikhailovAlexander@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "src" },
    { include = "tests" }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.0"
jsonschema = "^4.23.0"
pydantic = "^2.9.1"
strenum = "^0.4.15"
uvicorn = "^0.30.6"

[tool.poetry.scripts]
start = "src.main:start"
test = "tests.test_runner:run"

[tool.poetry.group.dev.dependencies]
coverage = "^7.6.1"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"