[tool.poetry]
name = "algoscalc-back"
version = "2.0.0"
description = "A training project for the development of algorithms in the context of a web application"
authors = ["Alexander Mikhailov <45492097+MikhailovAlexander@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "src" },
    { include = "tests" }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.0"
pydantic = "^2.9.1"
strenum = "^0.4.15"
uvicorn = "^0.30.6"
pydantic-settings = "^2.5.2"
pytest = "^8.3.3"

[tool.poetry.scripts]
start = "src.main:start"
dev = "src.dev:start"
test = "pytest:main"

[tool.poetry.group.dev.dependencies]
coverage = "^7.6.1"
httpx = "^0.27.2"
flake8 = "^7.1.1"
flake8-pyproject = "^1.2.3"
black = "^24.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88
exclude = [
    ".git",
    "__pycache__",
    ".venv"
]
extend-ignore = [
    "E203"
]

[tool.isort]
profile = "black"

[tool.black]
target-version = ["py312"]
line-length = 88
include = '\.pyi?$'

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v"
testpaths = [
    "tests"
]